Assetic options and my.css inclusion

--- a/src/views/layout.html.twig
+++ b/src/views/layout.html.twig
@@ -13,7 +13,8 @@
         {% stylesheets
             '../../vendor/twitter/bootstrap/less/bootstrap.less'
             '../../vendor/twitter/bootstrap/less/responsive.less'
-            filter='less,css_rewrite'
+            'css/my.css'
+            filter='less'
             combine=true
             output='css/screen.css'
         %}
