--- a/src/views/layout.html.twig
+++ b/src/views/layout.html.twig
@@ -1,28 +1,56 @@
+{% set application = 'PhotoLab' %}
+{% set language    = 'en' %}
+{% set meta = {
+    'author' : 'PilipLabs',
+    'description' : ''
+   }
+%}
+{% set cdn_domains = [
+        'cdnjs.cloudflare.com',
+        'html5shim.googlecode.com',
+   ]
+%}
+
 <!doctype html>
-<html>
+<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="{{ language }}"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="{{ language }}"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js lt-ie9" lang="{{ language }}"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="{{ language }}"> <!--<![endif]-->
     <head>
-        <meta http-equiv="content-type" content="text/html;charset=utf-8">
-        <title>{% block title %}{{ params.title }}{% endblock %}</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="utf-8">
+        {% for domain in cdn_domains %}
+            <link rel="dns-prefetch" href="{{ domain }}" />
+        {% endfor %}
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title>{% block title %}{% endblock %}{{ application }}</title>
+        {% block meta %}
+            <meta name="description" content="{{ meta.description }}">
+            <meta name="author" content="{{ meta.author }}">
+        {% endblock %}
+
+        <meta name="viewport" content="width=device-width">
 
         <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
         <!--[if lt IE 9]>
-          <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+          <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6/html5shiv.min.js"></script>
         <![endif]-->
 
-        {% stylesheets
+        {% block stylesheets %}
+        {% stylesheets filter='less' combine=true output='/assets/screen.css'
             '../../vendor/twitter/bootstrap/less/bootstrap.less'
             '../../vendor/twitter/bootstrap/less/responsive.less'
             'css/my.css'
-            filter='less'
-            combine=true
-            output='assets/screen.css'
         %}
         <link rel="stylesheet" type="text/css" href="{{ asset_url }}" />
         {% endstylesheets %}
+        {% endblock %}
+
+        <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.1/modernizr.min.js"></script>
     </head>
 
     <body>
+
+<!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
 
        <div class="logo-header center"> <img src="http://placehold.it/500x180"> </div>
         <div class="navbar">
@@ -33,47 +61,31 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>
-                    <a class="brand" href="/">{% block site_title %}{{ params.site_title }}{% endblock %}</a>
+                    <a class="brand" href="/">{{ application }}</a>
                     <div class="nav-collapse">
                         <ul class="nav">
-                            {% for item in params.navigation %}
-                                    {% if item.dropdown  %}
-                                    <li class="dropdown {{ item.active }}">
-                                    <a  class="dropdown-toggle" data-toggle="dropdown" data-target="#" href="{{ item.href }}" class="dropdown-toggle" data-toggle="dropdown">
-                                        {{ item.caption }}
-                                        <b class="caret"></b>
-                                    </a>
-                                        <ul  class="dropdown-menu">
-                                        {% for i in item.dropdown %}
-                                            <li class="{{ i.active }}"><a href="{{ i.href }}">{{ i.caption }}</a></li>
-                                        {% endfor %}
-                                        </ul>
-                                    </li>
-                                    {% else %}
-                                    <li class="{{ item.active }}">
-                                        <a href="{{ item.href }}">{{ item.caption }}</a>
-                                    </li>
-                                    {% endif %}
-                            {% endfor %}
+                            {% block nav %}{% endblock %}
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
 
-        {% block body %}{{ content }}{% endblock %}
+        {% block body %}
+        {% endblock %}
 
         <div class="input-prepend">
             <span class="add-on"><i class="icon-envelope"></i></span><input class="span2" id="inputIcon" type="text">
         </div>
 
-				{% javascripts 
-					'../../vendor/twitter/bootstrap/docs/assets/js/jquery.js'
-					'../../vendor/twitter/bootstrap/docs/assets/js/bootstrap.min.js'
-					'assets/my.js'
-					output="assets/scripts.js"
-				%}
-				<script type="text/javascript" src="{{ asset_url }}"></script>
-				{% endjavascripts %}
+        {% block javascripts %}
+        {% javascripts output='/assets/scripts.js'
+            '../../vendor/twitter/bootstrap/docs/assets/js/jquery.js'
+            '../../vendor/twitter/bootstrap/docs/assets/js/bootstrap.min.js'
+            'assets/my.js'
+        %}
+        <script type="text/javascript" src="{{ asset_url }}"></script>
+        {% endjavascripts %}
+        {% endblock %}
     </body>
 </html>
